@@ -273,5 +273,9 @@ Text with Java types <a href="http://--wiki/Eclipse:/TEST_PROJECT_NAME/com/teami
 </p>
 <p>
 A [forced link]<a href="http://--wiki/forcedlink">?</a> and one to an existing page: [wards browser content renderer test]<a href="http://--wiki/wardsbrowsercontentrenderertest">?</a></p>
+<p>
+</p>
+<p>
+Bug: [ 1490342 ] URL in brackets detected incorrectly: I am sure you have heard of Google (<a href="http://www.google.com">http://www.google.com</a>).</p>
   </body>
 </html>
