@@ -34,3 +34,5 @@ Verbatim!
 Text with Java types com.teaminabox.foo.BigClass and an inner class com.teaminabox.foo.BigClass.InnerClass
 
 [[TwikiBrowserContentRendererTest]] links and [[TwikiBrowserContentRendererTest]]
+
+Bug: [ 1490342 ] URL in brackets detected incorrectly: I am sure you have heard of Google (http://www.google.com).
